[workspace]
members = ["monitor", "tui"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Andrey Khranovsky <andrey.khranovsky@gmail.com>"]
version = "0.1.0"
name = "logquery"

[workspace.lints.clippy]
all = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace.dependencies]
futures = "0.3.30"
notify = "6.1.1"
tempfile = "3.6.0"
enum-as-inner = "0.6.0"
ratatui = "0.26.2"
crossterm = "0.27.0"
time = { version = "0.3.36", features = ["local-offset", "macros"] }

monitor = { path = "./monitor" }
