[workspace]
members = ["monitor", "tui"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Andrey Khranovsky <andrey.khranovsky@gmail.com>"]
version = "0.1.0"
name = "logquery"

[workspace.lints.clippy]
all = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
futures = "0.3.30"
notify = "6.1.1"
tempfile = "3.10.1"
enum-as-inner = "0.6.0"
ratatui = "0.26.2"
crossterm = "0.27.0"
time = { version = "0.3.36", features = [
    "local-offset",
    "macros",
    "formatting",
] }
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
dashmap = "5.5.3"
tracing = "0.1.40"
thiserror = "1.0.59"
color-eyre = "0.6.3"
tap = "1.0.1"

monitor = { path = "./monitor" }
