[workspace]
members = ["line-index-reader", "monitor", "tui"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Andrey Khranovsky <andrey.khranovsky@gmail.com>"]
version = "0.1.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
futures = "0.3.30"
notify = "6.1.1"
tempfile = "3.10.1"
enum-as-inner = "0.6.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
time = { version = "0.3.36", features = [
    "local-offset",
    "macros",
    "formatting",
] }
itertools = "0.13.0"
tokio = { version = "1.37.0", features = ["full"] }
dashmap = "5.5.3"
tracing = "0.1.40"
thiserror = "1.0.61"
color-eyre = "0.6.3"
tap = "1.0.1"
rstest = "0.19.0"

monitor = { path = "./monitor" }
line-index-reader = { path = "./line-index-reader" }
