[package]
name = "line-cache"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }

[dependencies]
futures = { workspace = true }
itertools = { workspace = true }
mini-moka = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# local deps
line-index-reader = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
