[package]
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
name = "line-index-reader"

[dependencies]
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
