[package]
name = "monitor"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lints]
workspace = true

[dependencies]
enum-as-inner = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
