[package]
name = "monitor"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lints]
workspace = true

[dependencies]
dashmap = { workspace = true }
enum-as-inner = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
tap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
