[package]
name = "logquiry-tui"
edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }

[dependencies]
crossterm = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
monitor = { workspace = true }
ratatui = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
